# morfeusz

./: CMakeLists.txt  CPackConfig.txt  LICENSE  README  buildDarwin.sh
fsabuilder/: buildanalyzer.sh  buildgenerator.sh  morfeusz_builder.py  setup.py.in
fsabuilder/morfeuszbuilder/fsa/: common.py  convertinput.py  encode.py  fsa.py  serializer.py  state.py  visualizer.py
fsabuilder/morfeuszbuilder/segrules/: preprocessor.py  pyparseString.py  rulesFSA.py  rulesManager.py  rulesNFA.py  rulesParser.py  shiftOrthMagic.py
fsabuilder/morfeuszbuilder/tagset/: segtypes.py  tagset.py
fsabuilder/morfeuszbuilder/utils/: configFile.py
fsabuilder/morfeuszbuilder/utils/caseconv/: generate.py
morfeusz/: CMakeLists.txt
morfeusz/wrappers/: morfeusz_java.i
morfeusz/wrappers/java/pl/sgjp/morfeusz/: MorphInterpretation.java
morfeusz/wrappers/perl/: CMakeLists.txt
morfeusz/wrappers/python/: CMakeLists.txt
